# universal-pddl-parser

./: .gitignore  CMakeLists.txt  vcpkg.json
examples/parser/: CMakeLists.txt
parser/: CMakeLists.txt  Expression.h
parser/include/universal-pddl/parser/: Action.h  And.h  Basic.h  CondIter.h  Condition.h  Derived.h  Domain.h  EitherType.h  Equals.h  Exists.h  Expression.h  Filereader.h  Forall.h  Function.h  FunctionModifier.h  Ground.h  GroundFunc.h  Instance.h  Lifted.h  Not.h  Oneof.h  Or.h  ParamCond.h  Task.h  TemporalAction.h  TokenStruct.h  Type.h  TypeGround.h  When.h
parser/src/: Action.cpp  And.cpp  Derived.cpp  Expression.cpp  FunctionModifier.cpp  Ground.cpp  GroundFunc.cpp  Lifted.cpp  Not.cpp  Oneof.cpp  TemporalAction.cpp  TypeGround.cpp
tests/: CMakeLists.txt  DomainTests.cpp
tests/expected/: Log_dom.pddl  Mapana_dom.pddl
